devops/k8s/sminedata/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zjkyfrontendpc
  labels:
    app: zjkyfrontendpc
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: zjkyfrontendpc
