devops/k8s/sminedata/DestinationRule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: zjkyfrontendpc
spec:
  host: "*"
#  trafficPolicy:
#    loadBalancer:
#      simple: LEAST_CONN
  subsets:
